syntax = "proto3";

option go_package = "/msgs;msgs";

// 訊息編號
enum MsgID {
  Unknown = 0; // 不明/錯誤訊息編號, 此編號不可使用
  JsonQ = 1; // 要求Json
  JsonA = 2; // 回應Json
  ProtoQ = 3; // 要求Proto
  ProtoA = 4; // 回應Proto
  LoginQ = 7; // 要求登入(使用Json處理器)
  LoginA = 8; // 回應登入(使用Json處理器)
  UpdateQ = 9; // 要求更新(使用Json處理器)
  UpdateA = 10; // 回應更新(使用Json處理器)
}

// 錯誤編號
enum ErrID {
  Success = 0; // 成功
  JsonUnmarshal = 1; // json反序列化失敗
  ProtoUnmarshal = 2; // proto反序列化失敗
  SubmitFailed = 3; // 資料庫執行失敗
  TokenNotMatch = 4; // token不匹配
}
