syntax = "proto3";

import "msgid.proto";

option go_package = "/msgs;msgs";

// 要求Proto
message MProtoQ {
  int64 time = 1; // 傳送時間
}

// 回應Proto
message MProtoA {
  MProtoQ from = 1; // 來源訊息
  ErrID errID = 2; // 錯誤編號
  int64 count = 3; // 封包計數
}
